<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kashua14.scientificcalc.MainActivity">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addition"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:background="@drawable/function_btns"
                android:text="@string/plus"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Button
                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:background="@drawable/function_btns"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:background="@drawable/function_btns"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Button
                android:id="@+id/subtraction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:background="@drawable/function_btns"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="30sp" />

        </LinearLayout>

</RelativeLayout>