<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
    android:gravity="center" android:orientation="vertical">

    <ImageView
        android:id="@+id/closePopupQuizRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:contentDescription="close button"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/negativePopupTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/welcome_title"
                    android:textAlignment="center"
                    android:textColor="@color/Green1"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/game_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="start"
                    android:text="@string/game_rules"
                    android:textAlignment="textStart"
                    android:textColor="@color/White"
                    android:textSize="25sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/rule1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/rule1"
                    android:textAlignment="textStart"
                    android:textColor="@color/White"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rule2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/rule2"
                    android:textAlignment="textStart"
                    android:textColor="@color/White"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/accept_button"
                    android:text="@string/start_btn"
                    android:textColor="@color/White"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>