<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
    android:gravity="center" android:orientation="vertical">

    <ImageView
        android:id="@+id/closePopupQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:contentDescription="close button"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/qn2"
                    android:textAlignment="center"
                    android:textColor="@color/GreenLight"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/qn1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="start"
                        android:text="@string/question2"
                        android:textAlignment="textStart"
                        android:textColor="@color/White"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/quiz_answer"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/White"
                        android:hint="@string/_0"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/Black"
                        android:textSize="25sp" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/accept_button"
                    android:text="@string/next_btn"
                    android:textColor="@color/White"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>